# GensokyoAI

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  DCO.md  LICENSE  QUICKSTART.md  README.md  README_en.md  Users27548AppDataLocalTemppytest-of-27548pytest-3test_history_command_can_show_0history.json  app.py  bridge_main.py  main_v2.py  normalize_code.cmd  project_design.md  pyproject.toml  requirements.txt  requirements_streamlit.txt  run_default.cmd  run_default_pip.cmd  run_default_uv.cmd  run_runtime.cmd  run_streamlit.cmd  runtime_http.py  test.py  user_guide.md
GenskoyoAI/: __init__.py
GenskoyoAI/backends/: __init__.py  base.py  console.py
GenskoyoAI/background/: __init__.py  manager.py  types.py
GenskoyoAI/background/workers/: __init__.py  base.py  memory_worker.py  persistence_worker.py
GenskoyoAI/core/: __init__.py  agent.py  config.py  events.py  exceptions.py
GenskoyoAI/memory/: __init__.py  episodic.py  semantic.py  types.py  working.py
GenskoyoAI/session/: __init__.py  context.py  manager.py  persistence.py
GenskoyoAI/tools/: __init__.py  base.py  executor.py  registry.py
GenskoyoAI/tools/tool_builtin/: __init__.py  moon.py  system.py  time.py
GenskoyoAI/utils/: __init__.py  cmd_parser.py  exec_hook.py  formatters.py  helpers.py  logging.py  validators.py
GensokyoAI/: __init__.py
GensokyoAI/backends/: __init__.py  base.py
GensokyoAI/backends/console/: __init__.py  _impl.py  commands.py
GensokyoAI/backends/web_server/: __init__.py  __main__.py  http_adapter.py  main.py
GensokyoAI/background/: __init__.py  manager.py  types.py
GensokyoAI/background/workers/: __init__.py  base.py  persistence_worker.py
GensokyoAI/cli/: __init__.py  character_cli.py  main.py
GensokyoAI/commands/: __init__.py  character_cli.py  context.py  decorators.py  executor.py  parser.py  result.py
GensokyoAI/core/: character_package.py  character_validator.py  config.py  config_env.py  config_loader.py  config_merge.py  config_schema.py  config_validator.py  event_listeners.py  events.py  migrations.py  schema_versions.py  version.py
GensokyoAI/core/agent/: __init__.py  _impl.py  action_executor.py  action_planner.py  actions.py  composition.py  conflict_detector.py  initiative_coordinator.py  initiative_timer.py  lifecycle.py  message_builder.py  model_client.py  model_registry.py  motivation_evaluator.py  prompts.py  response_handler.py  runtime_context.py  save_coordinator.py  types.py  (+1 more)
GensokyoAI/memory/: __init__.py  episodic.py  semantic.py  topic_store.py  types.py  working.py
GensokyoAI/runtime/: __init__.py  dependencies.py  event_contract.py  http_adapter.py  resource_control.py  rpc.py  service.py
GensokyoAI/scene/: __init__.py  manager.py  types.py
GensokyoAI/session/: context.py  manager.py  persistence.py
GensokyoAI/tools/: base.py  build_service.py  errors.py  executor.py  external_manager.py  mcp.py  registry.py  tool_context.py
GensokyoAI/utils/: __init__.py  command_security.py  content_security.py  exec_hook.py  helpers.py  logger.py  path_security.py  request_utils.py  url_security.py
GensokyoAI/world/: __init__.py  memory_paths.py  persistence.py  stage.py  transcript.py  types.py
changelog/: README.md
characters/: example.yaml  example_en.yaml  marisa.yaml  yuyuko.yaml
characters/zh_cn/: AliceMargatroid.yaml  Chen.yaml  Cirno.yaml  Daiyousei.yaml  DoremySweet.yaml  FlandreScarlet.yaml  HakureiReimu.yaml  HiedanoAkyuu.yaml  HimekaidouHatate.yaml  HongMeiling.yaml  HoshigumaYugi.yaml  HouraisanKaguya.yaml  HuziwaranoMokou.yaml  IbukiSuika.yaml  IizunamaruMegumu.yaml  InabaTewi.yaml  InubashiriMomizi.yaml  IzayoiSakuya.yaml  KaenbyouRin.yaml  KamishirasawaKeine.yaml  KawasiroNitori.yaml  KazamiYuka.yaml  KirisameMarisa.yaml  Koakuma.yaml  KochiyaSanae.yaml  KomeijiKoishi.yaml  KomeijiSatori.yaml  KonpakuYoumu.yaml  Lilywhite.yaml  LunaChild.yaml  MataraOkina.yaml  MoriyaSuwako.yaml  MystiaLorelei.yaml  OnozukaKomachi.yaml  ReisenUdongeinInaba.yaml  ReiujiUtsuho.yaml  RemiliaScarlet.yaml  Rumia.yaml  SaigyoujiYuyuko.yaml  ShameimaruAya.yaml  (+9 more)
config/: default.yaml  world_example.yaml
docs/: changelog.md  gsk-ai-mulit-character.md  gsk-ai-multi-character.md  multi_character_design.md  project_design.md  runtime_api.md  todo.md  user_guide.md  versioning.md
docs/changelog/: v2026.5.13.0.md  v2026.6.21.0.md  v2026.6.22.0.md  v2026.6.23.0.md  v2026.6.25.0.md  v2026.6.25.1.md  v2026.7.14.0.md  v2026.7.4.0.md
docs/en/: changelog.md  project_design.md  runtime_api.md  user_guide.md  versioning.md
scenes/zh_cn/: bamboo_forest.yaml  hakurei_shrine.yaml  human_village.yaml  magic_forest.yaml  scarlet_devil_mansion.yaml
scripts/: build_windows_release.py  config_syncer.py  prepare_client_python_assets.py  prepare_windows_runtime.py
streamlit_app/: api_client.py
tests/: test_abstract_contracts.py  test_agent_composition.py  test_api_call_p1_features.py  test_character_package_and_cli.py  test_claude_provider_conversion.py  test_console_cli_commands.py  test_deepseek_provider.py  test_deepseek_reasoning_flow.py  test_external_tool_manager.py  test_initiative_timer.py  test_model_client_embeddings.py  test_model_client_retry.py  test_model_registry.py  test_p1_4_public_memory_apis.py  test_provider_registry.py  test_request_utils.py  test_runtime_dependencies.py  test_runtime_event_contract.py  test_runtime_http_adapter.py  test_scene_manager.py  test_think_engine.py  test_tool_build_service.py  test_tool_context.py  test_tool_error_contract.py  test_web_search_tool.py  test_world_config.py  test_world_data_layer.py  test_world_persistence.py  test_world_turn_bridge.py
tests_security/: __init__.py  test_command_security.py  test_external_tool_policy.py  test_origin_validation.py  test_path_security.py  test_prompt_injection.py  test_runtime_auth.py  test_session_persistence_security.py  test_ssrf_url_validation.py
(+26 files in other folders)
