[project]
name = "GensokyoAI"
version = "0.1.0"
description = "幻想乡 AI 角色扮演引擎 - 一个专为角色扮演设计的异步 AI 对话框架"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Patchouli-CN" },
]
keywords = ["ai", "roleplay", "gensokyo", "llm", "ollama", "openai", "claude", "gemini", "character"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "msgspec",
    "loguru",
    "rich",
    "pyyaml",
    "ayafileio>=1.0.1.post2",
]

[project.optional-dependencies]
ollama = ["ollama"]
openai = ["openai>=1.0.0"]
claude = ["anthropic>=0.20.0"]
gemini = ["google-genai>=1.0.0"]
all = ["ollama", "openai>=1.0.0", "anthropic>=0.20.0", "google-genai>=1.0.0"]

[project.scripts]
gensokyoai = "main_v2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["GensokyoAI"]

[dependency-groups]
dev-dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 100
