[project]
name = "GensokyoAI"
version = "2026.5.13.0"
description = "幻想乡 AI 角色扮演引擎 - 一个专为角色扮演设计的异步 AI 对话框架"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
authors = [
    { name = "Patchouli-CN" },
]
keywords = ["ai", "roleplay", "gensokyo", "llm", "ollama", "openai", "claude", "gemini", "character"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "aiohttp>=3.9",
    "msgspec",
    "loguru",
    "rich",
    "pyyaml",
    "aioconsole",
    "ayafileio>=1.4.5",
]

[project.optional-dependencies]
ollama = ["ollama"]
openai = ["openai>=1.0.0"]
openrouter = ["openai>=1.0.0"]
deepseek = ["openai>=1.0.0"]
openai_responses = ["openai>=1.0.0"]
claude = ["anthropic>=0.20.0"]
gemini = ["google-genai>=1.0.0"]
default = ["ollama"]
all = ["ollama", "openai>=1.0.0", "anthropic>=0.20.0", "google-genai>=1.0.0"]

[project.scripts]
gensokyoai = "GensokyoAI.cli.main:cli_main"
gensokyoai-character = "GensokyoAI.cli.character_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["GensokyoAI"]
force-include = {"README_en.md" = "README_en.md", "docs/en" = "docs/en"}

[tool.hatch.build.targets.sdist]
include = ["README_en.md", "docs/en/**/*.md"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "coverage>=7.0",
    "ruff>=0.6.0",
    "pyright>=1.1.390",
    "build>=1.2.0",
]
dev-dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["GensokyoAI"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 45

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
include = ["GensokyoAI", "bridge_main.py"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".venv", "build", "dist", "tests"]
reportMissingImports = "warning"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"
